# python-workspace

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .mlc-config.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .releaserc.cjs  .releaserc.js  .yamllint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  STYLEGUIDE.md  cspell.json  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.md  QUESTIONS_OR_HELP.md  SECURITY_ISSUE_REPORT.md  bug.yml  config.yml  documentation.yml  feature.yml  other.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  scorecard.yml
docs/source/: conf.py  index.rst
src/my_package/: __init__.py  __main__.py  cli.py  utils.py
src/python_workspace/: __init__.py  __main__.py  cli.py  utils.py
tests/: cli_test.py  integration_test.py  utils_test.py
