[project]
name = "python-workspace"
version = "2.0.3"
description = "Ready-to-use Python workspace with a devcontainer, VS Code settings, linting, formatting, type checks, pre-commit hooks, and automated updates."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
authors = [
  {name = "Evgenii Shiliaev", email = "evgenii.shiliaev@jekwwer.com"}
]
keywords = [
  "python",
  "devcontainer",
  "vscode",
  "codespaces",
  "ci",
  "pre-commit-hooks",
  "linting",
  "formatting",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Jekwwer/python-workspace"
"Bug Reports" = "https://github.com/Jekwwer/python-workspace/issues"
Source = "https://github.com/Jekwwer/python-workspace"

[project.scripts]
cli = "python_workspace.cli:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.7.0"
coverage = {extras = ["toml"], version = "^7.9.1"}

[tool.poetry.group.lint.dependencies]
rstfmt = "^0.0.14"
ruff = "^0.15.11"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.20.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
  "# pragma: no cover",
  "^if __name__ == .__main__.:",
  "^\\s*#.*$"
]

[tool.coverage.run]
branch = true
source_pkgs = ["python_workspace"]
disable_warnings = ["module-not-measured"]
omit = [
  "tests/*",
  "src/python_workspace/__main__.py",
  "src/python_workspace/migrations/*"
]

[tool.mypy]
platform = "linux"
python_version = "3.14"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
  "--cov=python_workspace",
  "--cov-config=pyproject.toml",
  "--cov-fail-under=90",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml:coverage.xml"
]

[tool.ruff]
line-length = 88
extend-exclude = ["migrations", "__pycache__"]
src = ["src"]
target-version = "py314"

[tool.ruff.lint]
select = ["E","F","W","C","ANN","B","D","I","Q","UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["python_workspace"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
