[project]
name = "python-workspace"
version = "3.0.0"
description = "Python project template with Poetry, devcontainer, lint/type/test/docs toolchain, and semantic-release CI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
authors = [
  {name = "Evgenii Shiliaev", email = "evgenii.shiliaev@jekwwer.com"}
]
keywords = [
  "python",
  "template",
  "poetry",
  "devcontainer",
  "vscode",
  "github-actions",
  "ruff",
  "mypy",
  "pytest",
  "sphinx",
  "pre-commit",
  "semantic-release",
]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Jekwwer/python-workspace"
"Bug Reports" = "https://github.com/Jekwwer/python-workspace/issues"
Source = "https://github.com/Jekwwer/python-workspace"
Author = "https://jekwwer.com"

[project.scripts]
cli = "my_package.cli:main"

[tool.poetry]
packages = [{include = "my_package", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^9"
pytest-cov = "^7"
pytest-xdist = "^3.8.0"
coverage = {extras = ["toml"], version = "^7.9.1"}

[tool.poetry.group.lint.dependencies]
rstfmt = "^0.0.14"
ruff = "^0.15.11"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.20.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^9"
sphinx-autoapi = "^3.8.0"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2025.8"

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
  "# pragma: no cover",
  "^if __name__ == .__main__.:",
  "^\\s*#.*$"
]

[tool.coverage.run]
branch = true
source_pkgs = ["my_package"]
disable_warnings = ["module-not-measured"]
omit = [
  "tests/*",
  "src/my_package/__main__.py",
  "src/my_package/migrations/*"
]

[tool.mypy]
platform = "linux"
python_version = "3.14"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
  "--cov=my_package",
  "--cov-fail-under=90",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml:coverage.xml",
  "--junit-xml=junit.xml"
]

[tool.ruff]
line-length = 88
extend-exclude = ["migrations", "__pycache__"]
src = ["src"]
target-version = "py314"

[tool.ruff.lint]
select = ["E","F","W","C","ANN","B","D","I","Q","UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["my_package"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
